--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-concat-css": "^2.3.0",
     "gulp-csso": "^3.0.0",
     "gulp-debug": "^3.0.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-load-plugins": "^1.4.0",
