--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Aleksandr Sazhin <i4j5@ya.ru>",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-validation": "^1.19.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
