--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Aleksandr Sazhin <i4j5@ya.ru>",
   "license": "MIT",
   "dependencies": {
+    "bxslider": "^4.2.14",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.19.0"
   },
