--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "bxslider": "^4.2.14",
     "jquery": "^3.1.1",
-    "jquery-validation": "^1.19.0"
+    "jquery-validation": "^1.19.0",
+    "jquery.maskedinput": "^1.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
