--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "bxslider": "^4.2.14",
+    "ion-rangeslider": "^2.3.0",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.19.0",
     "jquery.maskedinput": "^1.4.1"
