--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ion-rangeslider": "^2.3.0",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.19.0",
-    "jquery.maskedinput": "^1.4.1"
+    "jquery.maskedinput": "^1.4.1",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
